Replace immutables with Kotlin data class